--- a/Flappy Bird/Flappy Bird.vcxproj
+++ b/Flappy Bird/Flappy Bird.vcxproj
@@ -141,6 +141,18 @@
   <ItemGroup>
     <ClCompile Include="Flappy Bird.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="..\..\..\..\Desktop\floppybird\res\background\cloud.png" />
+    <Image Include="..\..\..\..\Desktop\floppybird\res\background\ground.png" />
+    <Image Include="..\..\..\..\Desktop\floppybird\res\bird\frame-1.png" />
+    <Image Include="..\..\..\..\Desktop\floppybird\res\bird\frame-2.png" />
+    <Image Include="..\..\..\..\Desktop\floppybird\res\bird\frame-3.png" />
+    <Image Include="..\..\..\..\Desktop\floppybird\res\bird\frame-4.png" />
+    <Image Include="..\..\..\..\Desktop\floppybird\res\objects\brick.png" />
+    <Image Include="..\..\..\..\Desktop\floppybird\res\objects\trees.png" />
+    <Image Include="..\..\..\..\Desktop\floppybird\res\objects\trees_far.png" />
+    <Image Include="..\..\..\..\Desktop\floppybird\res\objects\trees_near.png" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
