--- a/Flappy Bird/Flappy Bird.vcxproj.filters
+++ b/Flappy Bird/Flappy Bird.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClCompile Include="Flappy Bird.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="frameupdate.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="flappyHeader.h">
