--- a/Flappy Bird/Flappy Bird.vcxproj
+++ b/Flappy Bird/Flappy Bird.vcxproj
@@ -141,6 +141,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="draw.cpp" />
     <ClCompile Include="Flappy Bird.cpp" />
     <ClCompile Include="frameupdate.cpp" />
   </ItemGroup>
