--- a/Flappy Bird/Flappy Bird.vcxproj.filters
+++ b/Flappy Bird/Flappy Bird.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="frameupdate.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="draw.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="flappyHeader.h">
